# ntl-feedstock

./: .travis.yml  README.md  conda-forge.yml
.ci_support/: linux_.yaml  linux_64_.yaml  linux_aarch64_.yaml  linux_c_compilergcccxx_compilergxx.yaml  linux_c_compilertoolchain_ccxx_compilertoolchain_cxx.yaml  linux_ppc64le_.yaml  osx_.yaml  osx_64_.yaml  osx_arm64_.yaml  osx_c_compilerclangcxx_compilerclangxx.yaml  osx_c_compilertoolchain_ccxx_compilertoolchain_cxx.yaml  win_64_.yaml  win_c_compilervs2015cxx_compilervs2015vc14.yaml
recipe/: 0001-Do-not-run-binaries-when-cross-compiling-for-Silicon.patch  0001-Do-not-run-binaries-when-cross-compiling.patch  0001-Do-not-run-binary-when-cross-compiling.patch  bld.bat  build.sh  cmake.patch  config.gf2x.patch  config.gmp.patch  gen_gmp_aux.cpp.patch  meta.yaml
recipe/windows/: CMakeLists.txt
